fixing spacing of the nav and linking up icons and nav

--- a/css/common.css
+++ b/css/common.css
@@ -22,14 +22,18 @@ a {
     text-decoration: none;
     color: #000000;
 }
-ul > li {
+ul .navicon {
     float: right;
     height: 70px;
     display: table;
+    margin-right:5%;
+    margin-top:5%;
 }
 
 .logo ul > li {
     float: left;
+    margin-left:5%;
+    margin-top:5%;
 }
 
 a.logo-left{
@@ -69,9 +73,9 @@ ul li ul {
     display: none;
     position: absolute;
     background: white;
-    top:60px;
+    top:85px;
     width: 150px;
-    right: 22px;
+    right: 45px;
     margin-top: 0%;
     border-radius: 8px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
