--- a/css/details.css
+++ b/css/details.css
@@ -174,7 +174,7 @@ h3{
 
 @media (max-width: 1290px){
     
-    img{
+   .image img{
         width:450px;
         height:auto;
     }
@@ -259,7 +259,7 @@ h3{
     margin-bottom:10%;
 }
     
-    img{
+    .image img{
         width:300px;
     }
     
