--- a/css/styles.css
+++ b/css/styles.css
@@ -31,10 +31,6 @@ a{
     display:table;
 }
 
-.dropdown{
-    color:white;
-}
-
 .hero{
     height:100%;
     background: url(../images/Large_pexels-photo-313707.jpeg) no-repeat left bottom fixed; 
